# camelcalc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/cdk/: main.ts  package.json
.github/workflows/: cdkactions_build-and-publish.yaml
camelcalc/: camelcalc.py  camelup.py  linkedlist.py  play.py  utils.py
